fix: fixed mobile user header spacing

--- a/src/app/components/profile/profile-header/ProfileHeader.module.scss
+++ b/src/app/components/profile/profile-header/ProfileHeader.module.scss
@@ -25,7 +25,7 @@
 				width: calc(100% - 20px);
 			}
 			@include breakpoint(xs) {
-				width: calc(100% - 40px);
+				width: calc(100% - 20px);
 			}
 
 			img {
@@ -94,7 +94,7 @@
 				width: calc(100% - 20px);
 			}
 			@include breakpoint(xs) {
-				width: calc(100% - 40px);
+				width: calc(100% - 20px);
 			}
 			.bio,
 			.noBioMessage {
@@ -251,7 +251,7 @@
 				width: calc(100% - 20px);
 			}
 			@include breakpoint(xs) {
-				width: calc(100% - 40px);
+				width: calc(100% - 20px);
 			}
 
 			l p {
